--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -117,7 +117,7 @@
           <div
             class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3"
           >
-            <img src="./briefcase.svg" alt="briefcase-logo" />
+            <img src="./briefcase.svg" alt="briefcase-logo" height="30px" />
           </div>
           <h3 class="fs-2 text-body-emphasis">Professional</h3>
           <p>
@@ -129,7 +129,7 @@
             with the utmost care and attention. Get a quote
           </p>
           <a href="#" class="icon-link">
-            Call to action
+            Call to action <img src="./chevron-right.svg" alt="" />
             <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
           </a>
         </div>
@@ -137,7 +137,7 @@
           <div
             class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3"
           >
-            <img src="./bus-front.svg" alt="bus-logo" />
+            <img src="./bus-front.svg" alt="bus-logo" height="30px" />
           </div>
           <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
           <p>
@@ -149,7 +149,7 @@
             getting a fair and competitive rate for our services. Get a quote
           </p>
           <a href="#" class="icon-link">
-            Call to action
+            Call to action <img src="./chevron-right.svg" alt="" />
             <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
           </a>
         </div>
@@ -157,7 +157,7 @@
           <div
             class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3"
           >
-            <img src="./chat-square-heart.svg" alt="" />
+            <img src="./chat-square-heart.svg" alt="" height="30px" />
           </div>
           <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
           <p>
@@ -169,12 +169,47 @@
             how we can help you with your next move. Get a quote
           </p>
           <a href="#" class="icon-link">
-            Call to action
+            Call to action <img src="./chevron-right.svg" alt="" />
             <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
           </a>
         </div>
       </div>
+
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./couple.jpg" class="d-block w-100" alt="dog img" />
+          </div>
+          <div class="carousel-item">
+            <img src="./dog.jpg" class="d-block w-100" alt="dog img" />
+          </div>
+          <div class="carousel-item">
+            <img src="./family.jpg" class="d-block w-100" alt="family image" />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
     </div>
+
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
