--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -198,7 +198,7 @@
         </button>
         <button
           class="carousel-control-next"
-          type="button"
+          type="button "
           data-bs-target="#carouselExample"
           data-bs-slide="next"
         >
@@ -209,6 +209,16 @@
 
     </div>
 
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+    </footer>
     
 
     <script
