--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -73,7 +73,7 @@
     </section>
     <!-- Features -->
     <section id="features">
-      <div>
+      <div class="container">
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div
@@ -84,13 +84,8 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-              <p>
-                Paragraph of text beneath the heading to explain the heading.
-                We'll add onto it with another sentence and probably just keep
-                going until we run out of words.
-              </p>
-              <a href="#" class="btn btn-primary"> Primary button </a>
+              <h3 class="fs-2 text-body-emphasis">Easy to use.</h3>
+              <p>So easy to use, even your dog could do it.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -102,13 +97,8 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-              <p>
-                Paragraph of text beneath the heading to explain the heading.
-                We'll add onto it with another sentence and probably just keep
-                going until we run out of words.
-              </p>
-              <a href="#" class="btn btn-primary"> Primary button </a>
+              <h3 class="fs-2 text-body-emphasis">Elite Clientele.e</h3>
+              <p>lite Clientele. We have all the dogs, the greatest dogs.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -120,13 +110,8 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-              <p>
-                Paragraph of text beneath the heading to explain the heading.
-                We'll add onto it with another sentence and probably just keep
-                going until we run out of words.
-              </p>
-              <a href="#" class="btn btn-primary"> Primary button </a>
+              <h3 class="fs-2 text-body-emphasis">Guaranteed to work.</h3>
+              <p>Find the love of your dog's life or your money back.</p>
             </div>
           </div>
         </div>
