--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -141,7 +141,7 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Guaranteed to work.</h3>
+              <h3 class="fs-2 text-body-emphasis">Guaranteed to worke.</h3>
               <p>Find the love of your dog's life or your money back.</p>
             </div>
           </div>
