--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -73,7 +73,7 @@
     </section>
     <!-- Features -->
     <section id="features">
-      <div class="container">
+      <div class="container mt-5">
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div
@@ -149,7 +149,30 @@
       </div>
     </section>
     <!-- Testimonial -->
-    <section id="testimonial"></section>
+    <section id="testimonial">
+      <div
+        class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-5"
+      >
+        <button
+          type="button"
+          class="position-absolute top-0 end-0 p-3 m-3 btn-close bg-secondary bg-opacity-10 rounded-pill"
+          aria-label="Close"
+        ></button>
+        <svg class="bi mt-5 mb-3" width="48" height="48">
+          <use xlink:href="#check2-circle"></use>
+        </svg>
+        <h1 class="text-body-emphasis">Placeholder jumbotron</h1>
+        <p class="col-lg-6 mx-auto mb-4">
+          This faded back jumbotron is useful for placeholder content. It's also
+          a great way to add a bit of context to a page or section when no
+          content is available and to encourage visitors to take a specific
+          action.
+        </p>
+        <button class="btn btn-primary px-5 mb-5" type="button">
+          Call to action
+        </button>
+      </div>
+    </section>
     <!-- Pricing -->
     <section id="pricing"></section>
     <!-- Footer -->
