--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2 active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Features</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">fAQs</a></li>
             <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">About</a></li>
           </ul>
           <ul class="nav">
@@ -137,7 +137,7 @@
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Elite Clientele.e</h3>
-              <p>lite Clientele. We have all the dogs, the greatest dogs.</p>
+              <p>lite Clientele xyz. We have all the dogs, the greatest dogs.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
