--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -136,7 +136,7 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Elite Clientele.e</h3>
+              <h3 class="fs-2 text-body-emphasis">Elite Clientele.</h3>
               <p>lite Clientele xyz. We have all the dogs, the greatest dogs.</p>
             </div>
           </div>
