--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -17,8 +17,15 @@
     <header>
       <div class="navbar">
         <div class="nav-logo border">
-          <div class="logo">
-            <!-- <img src="./amazon_logo.png" alt="amazon logo"> -->
+            <div class="logo">
+          </div>
+
+          <div class="nav-address">
+            <p>Deliver to</p>
+            <div class="add-icon">
+              <i class="fa-thin fa-location-dot" style="color: #efeff0"></i>
+              <p>India</p>
+            </div>
           </div>
         </div>
       </div>
