--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -21,7 +21,7 @@
           </div>
 
           <div class="nav-address">
-            <p>Deliver to</p>
+            <p>Delivery </p>
             <div class="add-icon">
               <i class="fa-thin fa-location-dot" style="color: #efeff0"></i>
               <p>India</p>
