--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -17,11 +17,10 @@
     <header>
       <div class="navbar">
         <div class="nav-logo border">
-            <div class="logo">
-          </div>
-
+          <div class="logo"></div>
+        </div>
           <div class="nav-address">
-            <p>Delivery </p>
+            <p>Delivery to</p>
             <div class="add-icon">
               <i class="fa-thin fa-location-dot" style="color: #efeff0"></i>
               <p>India</p>
