--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -19,14 +19,14 @@
         <div class="nav-logo border">
           <div class="logo"></div>
         </div>
-          <div class="nav-address">
-            <p>Delivery to</p>
+        
+          <div class="nav-address ">
+            <p class="add-first">Delivery to</p>
             <div class="add-icon">
-              <i class="fa-thin fa-location-dot" style="color: #efeff0"></i>
-              <p>India</p>
+              <i class="fa-solid fa-location-dot"></i>
+              <p class="add-second">India</p>
             </div>
           </div>
-        </div>
       </div>
     </header>
   </body>
