--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -19,14 +19,15 @@
         <div class="nav-logo border">
           <div class="logo"></div>
         </div>
-        
-          <div class="nav-address ">
-            <p class="add-first">Delivery to</p>
-            <div class="add-icon">
-              <i class="fa-solid fa-location-dot"></i>
-              <p class="add-second">India</p>
-            </div>
+
+        <div class="nav-address border">
+          <p class="add-first">Delivery to</p>
+          <div class="add-icon">
+            <!-- as both element are on same line so we insert on same div -->
+            <i class="fa-solid fa-location-dot"></i>
+            <p class="add-second">India</p>
           </div>
+        </div>
       </div>
     </header>
   </body>
