--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -28,6 +28,11 @@
             <p class="add-second">India</p>
           </div>
         </div>
+
+        <div class="nav-search">
+          
+        </div>
+
       </div>
     </header>
   </body>
