--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -30,7 +30,13 @@
         </div>
 
         <div class="nav-search">
-          
+          <select>
+            <option>All</option>
+          </select>
+          <input type="text" placeholder="Search Amazon">
+          <div class="search-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
         </div>
 
       </div>
