--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -33,10 +33,15 @@
           <select class="search-select">
             <option>All</option>
           </select>
-          <input type="text" placeholder="Search Amazon" class="search-input">
+          <input type="text" placeholder="Search Amazon" class="search-input" />
           <div class="search-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
+        </div>
+
+        <div class="nav-singin">
+          <p><span>Hello, Sign in</span></p> 
+          <p class="nav-second">Account & Lists</p>
         </div>
 
       </div>
