--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -40,8 +40,8 @@
         </div>
 
         <div class="nav-singin">
-          <p><span>Hello, Sign in</span></p> 
-          <p class="nav-second">Account & Lists</p>
+          <p><span>Hello,  Sign in</span></p> 
+          <p class="nav-second">Account & List</p>
         </div>
 
       </div>
