--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="nav-singin">
-          <p><span>Hello,  Sign in</span></p> 
+          <p><span>Helloo,   Sign in</span></p> 
           <p class="nav-second">Account & List</p>
         </div>
 
