--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -39,11 +39,20 @@
           </div>
         </div>
 
-        <div class="nav-singin">
-          <p><span>Helloo,   Sign in</span></p> 
+        <div class="nav-singin border">
+          <p><span>Hello, Sign in</span></p>
           <p class="nav-second">Account & List</p>
         </div>
 
+        <div class="nav-return border">
+          <p><span>Returns</span></p>
+          <p class="nav-second">& Orders</p>
+        </div>
+
+        <div class="nav-cart border">
+          <i class="fa-solid fa-cart-shopping"></i>
+          Cart
+        </div>
       </div>
     </header>
   </body>
