--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -54,6 +54,25 @@
           Cart
         </div>
       </div>
+
+      <div class="panel">
+        <div class="panel-all">
+          <i class="fa-solid fa-bars"></i>
+          All
+        </div>
+
+        <div class="panel-ops">
+          <p>Today's Deals</p>
+          <p>Customer Service</p>
+          <p>Registry</p>
+          <p>Gift Cards</p>
+          <p>Sell</p>
+        </div>
+
+        <div class="deals">
+          <p>Shop deals in Electronic</p>
+        </div>
+      </div>
     </header>
   </body>
 </html>
