--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -67,11 +67,10 @@
           <p>Registry</p>
           <p>Gift Cards</p>
           <p>Sell</p>
+          <p>play & win </p>
         </div>
 
-        <div class="deals">
-          <p>Shop deals in Electronic</p>
-        </div>
+        <div class="deals">Shop deals in Electronic</div>
       </div>
     </header>
   </body>
