--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -72,5 +72,13 @@
         <div class="deals">Shop deals in Electronic</div>
       </div>
     </header>
+    <div class="hero-section">
+      <div class="hero-message-section">
+        <p>
+          You are on amazon.com. Tou can shop on Amazon India for millions of
+          products with fast delivery. <a>Click here to go to amazon.in</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
