--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -75,8 +75,8 @@
     <div class="hero-section">
       <div class="hero-message-section">
         <p>
-          You are on amazon.com. Tou can shop on Amazon India for millions of
-          products with fast delivery. <a>Click here to go to amazon.in</a>
+          You are on amazon.com. You can shop on Amazon India for millions of
+          products with fast delivery with in 5 days. <a>Click here to go to amazon.in</a>
         </p>
       </div>
     </div>
