--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -76,7 +76,7 @@
       <div class="hero-message-section">
         <p>
           You are on amazon.com. You can shop on Amazon India for millions of
-          products with fast delivery with in 5 days. <a>Click here to go to amazon.in</a>
+          products with fast delivery with in 5 days.on single click <a>Click here to go to amazon.in</a>
         </p>
       </div>
     </div>
