--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -76,9 +76,19 @@
       <div class="hero-message-section">
         <p>
           You are on amazon.com. You can shop on Amazon India for millions of
-          products with fast delivery with in 5 days.on single click <a>Click here to go to amazon.in</a>
+          products with fast local delivery <a>Click here to go to amazon.in</a>
         </p>
       </div>
+    </div>
+    <div class="shop-section">
+      <div class="box1 box">
+                  <h2>Health & Personal</h2>
+                  <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
+                  <p>See more</p>
+      </div>
+      <div class="box2 box">Box2</div>
+      <div class="box3 box">Box3</div>
+      <div class="box4 box">Box4</div>
     </div>
   </body>
 </html>
