updated in shoping section

--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -82,9 +82,12 @@
     </div>
     <div class="shop-section">
       <div class="box1 box">
-                  <h2>Health & Personal</h2>
-                  <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
-                  <p>See more</p>
+            <div class="box-content">
+              <h2>Health & Personal</h2>
+              <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
+              <p>See more</p>
+            </div>
+                  
       </div>
       <div class="box2 box">Box2</div>
       <div class="box3 box">Box3</div>
