--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -83,9 +83,9 @@
     <div class="shop-section">
       <div class="box1 box">
             <div class="box-content">
-              <h2>Health & Personal</h2>
+              <h2>Healths & Personal</h2>
               <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
-              <p>See more</p>
+              <p>See moree</p>
             </div>
                   
       </div>
