--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -82,14 +82,23 @@
     </div>
     <div class="shop-section">
       <div class="box1 box">
-            <div class="box-content">
-              <h2>Healths & Personal</h2>
-              <div class="box-image" style="background-image: url('box1_image.jpg');"></div>
-              <p>See moree</p>
-            </div>
-                  
+        <div class="box-content">
+          <h2>Healths & Personal</h2>
+          <div
+            class="box-image"
+            style="background-image: url('box1_image.jpg')"
+          ></div>
+          <p>See moree</p>
+        </div>
       </div>
-      <div class="box2 box">Box2</div>
+      <div class="box2 box">
+        <h2>Healths & Personal</h2>
+        <div
+          class="box-image"
+          style="background-image: url('box1_image.jpg')"
+        ></div>
+        <p>See moree</p>
+      </div>
       <div class="box3 box">Box3</div>
       <div class="box4 box">Box4</div>
     </div>
