--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -99,7 +99,14 @@
         ></div>
         <p>See moree</p>
       </div>
-      <div class="box3 box">Box3</div>
+      <div class="box3 box">
+        <h2>Healths & Personal</h2>
+        <div
+          class="box-image"
+          style="background-image: url('box1_image.jpg')"
+        ></div>
+        <p>See moree</p>
+      </div>
       <div class="box4 box">Box4</div>
     </div>
   </body>
