--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -239,7 +239,31 @@
         ></div>
         <p>See moree</p>
       </div>
+
+      <div class="box4 box">
+        <h2>Healths & Personal</h2>
+        <div
+          class="box-image"
+          style="background-image: url('box1_image.jpg')"
+        ></div>
+        <p>See moree</p>
+      </div>
       
     </div>
   </body>
 </html>
+
+function test() {
+  var a = "3";
+  var b = "8";
+  
+/***********Do not change the code above 👆*******/
+//Write your code on lines 7 - 9:
+ var c = a ;
+      a=b;
+      b=c;
+/***********Do not change the code below 👇*******/
+
+  console.log("a is " + a);
+  console.log("b is " + b);
+}
