--- a/11.4 amazon project clone/index.html
+++ b/11.4 amazon project clone/index.html
@@ -249,6 +249,15 @@
         <p>See moree</p>
       </div>
       
+      <div class="box4 box">
+        <h2>Healths & Personal</h2>
+        <div
+          class="box-image"
+          style="background-image: url('box1_image.jpg')"
+        ></div>
+        <p>See moree</p>
+      </div>
+      
     </div>
   </body>
 </html>
